OCW-95 #comment unbind html click when screen it greater than 992px to prevent menu from sliding off the page in full screen OCW-95 #comment move search icon out of menu and ajusted spacing in header

--- a/core/static/css/_mixins.scss
+++ b/core/static/css/_mixins.scss
@@ -73,13 +73,13 @@
   }
   .logo{
     img{
-      height: 30px;
+      max-height: 40px;
       display: inline;
     }
   }
 
   .share-links.vcenter {
-    margin-top: 0.3%;
+    margin-top: 0.7%;
     @media(max-width: $screen-xs){
       margin-top: 1.5%;
     }
